# omnivook

./: .gitignore  README.md  omnivook.py  pyproject.toml  requirements.txt
.github/workflows/: email.yaml  omnivook.yml  release.yml
omnivook/: __init__.py
omnivook/source_template/: conf.py  index.md
source/: conf.py  index.md
source_template/: conf.py
