[project]
name = "omnivook"
version = "0.1.2"
description = "A tool to generate ebooks from Omnivore articles"
readme = "README.md"
dependencies = [
    "omnivoreql",
    "sphinx",
    "rich",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["omnivook"]
include-package-data = true
package-data = {"omnivook" = ["source_template/*"]}

[project.scripts]
omnivook = "omnivook:main"