[project]
name = "omnivook"
description = "A tool to generate ebooks from Omnivore articles"
readme = "README.md"
dependencies = [
    "omnivoreql",
    "sphinx",
    "rich",
    "myst_parser",
]
dynamic = ["version"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"omnivook" = ["source_template/*"]

[tool.setuptools.dynamic]
version = {attr = "omnivook.__version__"}

[project.scripts]
omnivook = "omnivook:main"